# template-vanilla-ts-wasm

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: counter.ts  main.ts
wasm/: Cargo.toml  README.md
wasm/src/: fetch.rs  lib.rs  threed.rs  webgl.rs
